/*
  March Networks

  Project One API description

  The version of the OpenAPI document: 1.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;

import public "models/channel_entity.proto";

message ChannelImageWithDistanceEntity {

  // The I.D of the role.
  string id = 3355;

  // The associated channel.
  ChannelEntity channel = 202079492;

  // The name of the file.
  string fileName = 198851034;

  // The name of the file.
  string originalName = 527181823;

  // The timestamp of the image.
  string timestamp = 55126294;

  // The vector distance from the search criteria. The closer the value is to 0, the closer it is to the search criteria.
  optional float distance = 288459765;

}
