/*
  March Networks

  Project One API description

  The version of the OpenAPI document: 1.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;


message Device2Entity {

  // The I.D of the device.
  string id = 3355;

  // The I.D of the tenant.
  string tenantId = 232951965;

  // The name of the device.
  string name = 3373707;

  // The date the device was created.
  string createdAt = 61500732;

  // The last time the device was updated.
  string updatedAt = 338581941;

}
